# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gen_diff/logic/: diff_generate.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  ee__init__.py
gendiff/scripts/: gendiff.py
gendiff/src/: cli.py  find_differences.py  find_diffs.py
tests/: test_find_diffs.py  test_gendiff.py
tests/fixtures/: file1.yaml  file2.yaml  result_json.txt  struct_file1.yaml  struct_file2.yaml  struct_json_diffs.txt
